<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/set_your_default_card"
        android:textColor="@color/black100"
        android:textSize="14dp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/set_as_default_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/set_default"
        android:textSize="12dp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/card_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/set_as_default_title"
        android:layout_alignBottom="@id/set_as_default_title"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/set_as_default_title"
        android:gravity="center_vertical"
        android:text="@string/card_details"
        android:textSize="12dp"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cards_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_as_default_title"
        android:layout_marginTop="12dp"
        tools:listitem="@layout/item_card_manage" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/paybutton_black_border"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />
</RelativeLayout>