<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="io.paysky.ui.fragment.qr.QrCodePaymentFragment">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/open_wallet_app"
            android:textColor="#2d3134"
            android:textSize="12dp" />


        <ImageView
            android:id="@+id/qr_imageView"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:scaleType="fitXY" />

        <LinearLayout
            android:id="@+id/sms_payment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/enter_mobile_number"
                android:textColor="#2d3134" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:background="@color/accentColor" />

                <EditText
                    android:id="@+id/mobile_number_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_drawable"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:paddingStart="4dp"
                    android:textSize="14dp" />
            </LinearLayout>

            <Button
                android:id="@+id/send_otp_button"
                style="@style/buttonStyle"
                android:layout_height="34dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/paybutton_green_button"
                android:text="@string/send_otp"
                android:textAllCaps="false" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/or_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#C7C8C8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/or"
                android:textColor="#C7C8C8"
                android:textSize="16dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#C7C8C8" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/request_payment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/request_payment_layout_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/cant_scan_code"
                android:textColor="#2d3134"
                android:textSize="11dp" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/request_payment"
                    style="@style/buttonStyle"
                    android:layout_width="120dp"
                    android:layout_height="31dp"
                    android:background="@drawable/paybutton_green_button"
                    android:text="@string/request_payment"
                    android:textAllCaps="false"
                    android:textSize="10dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
