<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        tools:context="io.paysky.ui.fragment.listcards.ListCardsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/select_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:text="@string/select_card"
                android:textColor="@color/black100"
                android:textSize="14dp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/manage_cards_button"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/paybutton_blue_border"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/manage_cards"
                android:textAllCaps="false"
                android:textColor="@color/blue100" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cards_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/item_saved_card" />

        <Button
            android:id="@+id/add_new_card_button"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/paybutton_blue_border"
            android:text="@string/add_new_card"
            android:textAllCaps="false"
            android:textColor="@color/blue100" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="40dp" />

        <Button
            android:id="@+id/proceed_button"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/button_blue_selector"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/paybutton_black_border"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

    </LinearLayout>
</ScrollView>