<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="io.paysky.ui.fragment.manualpayment.ManualPaymentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:gravity="center"
                android:text="@string/enter_card_data"
                android:textColor="#282C2E" />


            <!-- <TableRow>

                 <ImageView
                     android:id="@+id/card_type_imageView"
                     android:layout_width="40dp"
                     android:layout_height="22dp"
                     android:scaleType="fitXY" />
             </TableRow>-->

            <LinearLayout
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/rectangle_border_drawable">

                <View
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_number_leading" />

                <io.paysky.ui.custom.CardEditText
                    android:id="@+id/card_number_editText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/card_number_background"
                    android:digits="01234 56789"
                    android:drawableStart="@drawable/ic_card_mini"
                    android:drawablePadding="4dp"
                    android:hint="@string/card_number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="19"
                    android:maxLines="1"
                    android:paddingHorizontal="4dp"
                    android:singleLine="true"
                    android:text=""
                    android:textAlignment="viewStart"
                    android:textColorHint="?android:textColorHint"
                    android:textDirection="ltr"
                    android:textSize="14dp" />

                <ImageView
                    android:id="@+id/scan_camera_imageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_camera" />
            </LinearLayout>

            <EditText
                android:id="@+id/card_owner_name_editText"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/rectangle_border_drawable"
                android:hint="@string/name_on_card"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                android:singleLine="true"
                android:textColorHint="?android:textColorHint"
                android:textSize="14dp" />

            <TableRow android:layout_marginTop="12dp">

                <io.paysky.ui.custom.ExpiryDate
                    android:id="@+id/expire_date_editText"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_border_drawable"
                    android:drawableEnd="@drawable/ic_calender"
                    android:drawablePadding="4dp"
                    android:hint="@string/expire_date"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:paddingHorizontal="8dp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColorHint="?android:textColorHint"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/ccv_editText"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_border_drawable"
                    android:drawableEnd="@drawable/ic_cvv_mini"
                    android:drawablePadding="4dp"
                    android:hint="@string/cvc"
                    android:imeOptions="actionDone"
                    android:inputType="numberSigned"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:paddingHorizontal="8dp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColorHint="?android:textColorHint"
                    android:textSize="14dp" />
            </TableRow>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/save_for_future_checkbox"
                android:layout_marginTop="20dp"
                android:button="@android:color/transparent"
                android:drawableStart="@drawable/checkbox_state"
                android:drawablePadding="10dp"
                android:text="@string/save_for_future_use"
                android:textColor="?android:textColorHint" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/set_as_default_checkbox"
                android:layout_marginTop="18dp"
                android:button="@android:color/transparent"
                android:drawableStart="@drawable/checkbox_state"
                android:drawablePadding="10dp"
                android:text="@string/set_as_default"
                android:textColor="?android:textColorHint" />


            <Button
                android:id="@+id/proceed_button"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/button_blue_selector"
                android:text="@string/proceed"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/paybutton_black_border"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@android:color/black" />
        </TableLayout>

    </LinearLayout>

</ScrollView>