<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/print_receipt_layout"
            android:layout_width="384dp"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="io.paysky.ui.fragment.paymentsuccess.PaymentApprovedFragment">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="18dp">

                <ImageView
                    android:id="@+id/loading_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="92dp"
                    android:layout_marginEnd="92dp"
                    android:src="@drawable/ic_loading" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_approved" />
            </FrameLayout>


            <TextView
                android:id="@+id/approved_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:textSize="14dp"
                tools:text="approved" />

            <TableRow
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/auth_number_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#282C2E"
                    android:textSize="14dp"
                    tools:text="@string/auth_number" />

            </TableRow>


            <TableRow
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/trx_id_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#282C2E"
                    android:textSize="14dp"
                    tools:text="@string/trx_id" />
            </TableRow>

            <Button
                android:id="@+id/print_receipt_button"
                style="@style/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/paybutton_green_button"
                android:text="@string/print"
                android:textAllCaps="false" />

            <LinearLayout
                android:id="@+id/send_email_notification"
                android:orientation="vertical">

                <!--<View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#C7C8C8" />
    -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:gravity="center"
                    android:text="@string/send_notification"
                    android:textColor="#282C2E"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/send_email_layout"
                android:layout_height="36dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp">

                <EditText
                    android:id="@+id/email_editText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_border_drawable"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="8dp"
                    android:textSize="14dp" />

                <Button
                    android:id="@+id/send_email_button"
                    style="@style/buttonStyle"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sent_email_success_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/mail_sent_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="1dp"
                    android:gravity="center"
                    android:textColor="#00BFA5"
                    android:textSize="12dp"
                    tools:text="ahmed" />

                <Button
                    android:id="@+id/close_button"
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_blue_selector"
                    android:text="@string/close"
                    android:textAllCaps="false" />
            </LinearLayout>

        </TableLayout>
    </RelativeLayout>
</ScrollView>
